--- a/NoteBooks/data_cleaning_2.ipynb
+++ b/NoteBooks/data_cleaning_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "75284b3a",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "id": "9bc6123b",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "9dedf613",
    "metadata": {},
    "outputs": [
@@ -210,7 +210,7 @@
        "4  Javascript,MongoDB,Management,Python,Full Stac...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "a4b5caa5",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
        "(21901, 15)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "id": "3d5569e5",
    "metadata": {},
    "outputs": [
@@ -267,7 +267,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "id": "5a636b41",
    "metadata": {},
    "outputs": [],
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "id": "87cb426e",
    "metadata": {},
    "outputs": [],
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "id": "f698d983",
    "metadata": {},
    "outputs": [
@@ -488,7 +488,7 @@
        "4  Javascript,MongoDB,Management,Python,Full Stac...  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "id": "daf38e66",
    "metadata": {},
    "outputs": [
@@ -524,7 +524,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "id": "3cb10d51",
    "metadata": {},
    "outputs": [],
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "id": "b9c6289f",
    "metadata": {},
    "outputs": [],
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "id": "e7a7f9c4",
    "metadata": {},
    "outputs": [],
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "id": "ec2b876e",
    "metadata": {},
    "outputs": [
@@ -593,7 +593,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "944dad15",
    "metadata": {},
    "outputs": [
@@ -613,59 +613,46 @@
      "output_type": "stream",
      "text": [
       "Job description\n",
-      "\n",
-      "Key Responsibilities & Required Skills:\n",
-      "Proficient in backend development using Node.js, TypeScript, and the Express framework\n",
-      "Strong knowledge of relational databases and SQL, with experience in tools like Oracle, MySQL, PostgreSQL, SQL Server, or PL/SQL\n",
-      "Skilled in frontend technologies including React, TypeScript, JavaScript (ES6+), HTML5, and SCSS\n",
-      "Hands-on experience with unit testing using Jest\n",
-      "Familiarity with microservices architecture and event-driven systems\n",
-      "Experience working with Agile methodologies and tools such as Jira, Confluence, and GitHub\n",
-      "Excellent communication skills and proven ability to work on enterprise-scale project\n",
-      "Nice to Have:\n",
-      "Exposure to MongoDB\n",
-      "Familiarity with Pentaho Reports and Oracle APEX\n",
-      "Knowledge of Docker and Google Cloud Platform (GCP)\n",
-      "Job Responsibilities:\n",
-      "Design, develop, and maintain robust backend services using Node.js , TypeScript , and the Express framework.\n",
-      "Build responsive and dynamic user interfaces using React , TypeScript , JavaScript (ES6+) , HTML5 , and SCSS .\n",
-      "Develop and optimize SQL queries and work with relational databases like Oracle , MySQL , PostgreSQL , or SQL Server .\n",
-      "Write and maintain unit tests using Jest to ensure code quality and reliability.\n",
-      "Participate in designing and implementing microservices and event-driven architectures .\n",
-      "Collaborate with cross-functional teams following Agile development practices and utilize tools like Jira , Confluence , and GitHub .\n",
-      "Ensure high performance, scalability, and security of applications across the stack.\n",
-      "Contribute to code reviews, documentation, and knowledge sharing within the team.\n",
-      "Engage with enterprise-level projects, ensuring timely delivery and adherence to project requirements.\n",
-      "Communicate effectively with team members, stakeholders, and clients to understand and deliver on business needs.\n",
-      "Primary Skills:\n",
-      "React\n",
-      "NodeJS\n",
-      "MongoDB\n",
-      "SQL databases\n",
-      "Agile/Scrum Methodologies\n",
-      "Communication Skills\n",
-      "Other Skills:\n",
-      "Docker\n",
-      "Role: Full Stack Developer\n",
-      "Industry Type: IT Services & Consulting\n",
+      "Job Summary\n",
+      "The Core Software team is a high-performance engineering team responsible for building the fundamental software to manage the ONTAP software product\n",
+      "You will work as part of a team responsible for the development, testing and debugging of distributed software that drives NetApp cloud, hybrid-cloud and on-premises solutions, As a seasoned software engineer, you will work as part of a team of skilled and passionate engineers responsible for participating in the design, development, debugging, maintenance & testing\n",
+      "This position requires an individual to be creative, team-oriented, technology savvy, and driven to produce results\n",
+      "Job Requirements\n",
+      "Proficiency in C++ is must\n",
+      "Experience with Python is a bonus, Experience?working with file systems, distributed systems, client-server programming, multi-threaded applications,?and operating?systems such as FreeBSD,?Linux\n",
+      "A strong understanding of basic to complex concepts related to computer architecture, data structures, and programming practices, Experience in integrating 3rd Party Software Packages into a product, Experience in working with Security Vulnerabilities, CVEs and resolving them, Experience with REST API, Cloud, and Virtualization environments is a plus, Demonstrated creative and systematic approach to problem solving, Possess excellent written and verbal communication skills, Ability to?work under limited supervision and?direction, Ability to work collaboratively within a team environment of other engineers to meet aggressive goals and high-quality standards\n",
+      "Lead medium to large feature deliveries, including participating in the full software development lifecycle, Deliver reliable, innovative storage and data management products, Design, implement?and test software in Python with a focus?on simplicity, reliability, and manageability, Participate in product design, development, verification, troubleshooting, and delivery of a system or major subsystems, including authoring project specifications, Write unit and automated integration?tests, Conduct?and participate in technical discussions within the team as well as with other groups across Business Units in the company, Facilitate technical discussions and lead presentations with engineering leadership, Education\n",
+      "Tech/BE in Computer Science/Computer Engineering, a masters degree, or equivalent experience is required\n",
+      "4-8 years of industry experience in the relevant domain is required\n",
+      "At NetApp, we embrace a hybrid working environment designed to strengthen connection, collaboration, and culture for all employees\n",
+      "This means that most roles will have some level of in-office and/or in-person expectations, which will be shared during the recruitment process, Equal Opportunity Employer\n",
+      "NetApp is firmly committed to Equal Employment Opportunity (EEO) and to compliance with all laws that prohibit employment discrimination based on age, race, color, gender, sexual orientation, gender identity, national origin, religion, disability or genetic information, pregnancy, and any protected classification, Why NetApp\n",
+      "We are all about helping customers turn challenges into business opportunity\n",
+      "It starts with bringing new thinking to age-old problems, like how to use data most effectively to run better but also to innovate\n",
+      "We tailor our approach to the customer's unique needs with a combination of fresh thinking and proven approaches, We enable a healthy work-life balance\n",
+      "Our volunteer time off program is best in class, offering employees 40 hours of paid time off each year to volunteer with their favourite organizations\n",
+      "We provide comprehensive benefits, including health care, life and accident plans, emotional support resources for you and your family, legal services, and financial savings programs to help you plan for your future\n",
+      "We support professional and personal growth through educational assistance and provide access to various discounts and perks to enhance your overall quality of life, If you want to help us build knowledge and solve big problems, let's talk,\n",
+      "Role: Blockchain Quality Assurance Engineer\n",
+      "Industry Type: Software Product\n",
       "Department: Engineering - Software & QA\n",
       "Employment Type: Full Time, Permanent\n",
-      "Role Category: Software Development\n",
+      "Role Category: Quality Assurance and Testing\n",
       "Education\n",
       "UG: Any Graduate\n",
       "PG: Any Postgraduate\n",
       "Key Skills\n",
-      "BackendPostgresqlMySQLPLSQLMongoDBUnit testingOracleJIRAPentahoSQL\n"
+      "computer architecturedata structuresc++pythonlinuxwritingproblem solvingprogrammingcommunication skills\n"
      ]
     }
    ],
    "source": [
-    "print(df['Full JD'].iloc[11])"
+    "print(df['Full JD'].iloc[1100])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 17,
    "id": "8b2cf7e5",
    "metadata": {},
    "outputs": [],
@@ -676,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
    "id": "78b4e739",
    "metadata": {},
    "outputs": [
@@ -764,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 20,
    "id": "a5f81785",
    "metadata": {},
    "outputs": [],
@@ -796,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "id": "d6349505",
    "metadata": {},
    "outputs": [],
@@ -824,7 +811,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 22,
+   "id": "62bde316",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Job description\n",
+      "We are seeking a Full Stack Developer to join our development team\n",
+      "As a Full Stack Developer, you will be responsible for designing, developing, and maintaining both the front-end and back-end components of web applications\n",
+      "You will work on a variety of technologies to build scalable and robust applications, ensuring smooth user experiences and efficient server-side operations\n",
+      "Key Responsibilities:\n",
+      "Develop both front-end and back-end components of web applications using modern web technologies\n",
+      "Design and implement RESTful APIs and integrate them with front-end and back-end systems\n",
+      "Collaborate with UX/UI designers to create user-friendly interfaces and seamless user experiences\n",
+      "Implement responsive designs and ensure web applications are optimized for performance and scalability\n",
+      "Work with databases (SQL and NoSQL) for efficient data storage and retrieval\n",
+      "Troubleshoot and debug applications, optimizing them for speed and usability\n",
+      "Write clean, maintainable, and efficient code following coding best practices and design patterns\n",
+      "Implement unit testing and ensure the codebase meets quality standards\n",
+      "Collaborate with cross-functional teams (QA, DevOps, etc) to ensure smooth deployments and high-quality delivery\n",
+      "Stay up-to-date with emerging technologies and industry trends to continuously improve the development process\n",
+      "Required Skills and Qualifications:\n",
+      "3+ years of experience in Full Stack Development\n",
+      "Strong proficiency in JavaScript and TypeScript for both client and server-side development\n",
+      "Experience with front-end frameworks such as React\n",
+      "js, Angular, or Vuejs\n",
+      "Strong experience in back-end technologies like Node js, Expressjs, or Java\n",
+      "Proficiency in working with RESTful APIs and third-party integrations\n",
+      "Experience with databases such as MySQL, MongoDB, or PostgreSQL\n",
+      "Understanding of version control systems like Git and experience with CI/CD pipelines\n",
+      "Familiarity with cloud platforms like AWS, Azure, or Google Cloud\n",
+      "Experience with containerization technologies like Docker is a plus\n",
+      "Knowledge of Agile development methodologies\n",
+      "Strong problem-solving skills and ability to work in a collaborative team environment\n",
+      "Technical Skills:\n",
+      "JavaScript | TypeScript | Reactjs | Angular | Vuejs | Nodejs | Expressjs | Java | RESTful APIs | MongoDB | MySQL | PostgreSQL | Git | CI/CD | AWS | Azure | Google Cloud | Docker | Kubernetes | Agile | Unit Testing | Microservices | DevOps\n",
+      "Role: Full Stack Developer\n",
+      "Industry Type: IT Services & Consulting\n",
+      "Department: Engineering - Software & QA\n",
+      "Employment Type: Full Time, Permanent\n",
+      "Role Category: Software Development\n",
+      "Education\n",
+      "UG: B.Tech/B.E. in Any Specialization\n",
+      "PG: Any Postgraduate\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['Full JD'].iloc[110])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "2df129b6",
    "metadata": {},
    "outputs": [],
